force-app/main/default/objects/Portal_Sync_Value_Map__mdt/Portal_Sync_Value_Map__mdt.object-meta.xml
<CustomObject>
    <label>Portal Sync Value Map</label>
    <pluralLabel>Portal Sync Value Maps</pluralLabel>
</CustomObject>