force-app/main/default/objects/Portal_Sync_Value_Map__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this translation is ignored. If it was the only row left for its field, the field stops being translated and its raw Salesforce value is sent again.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>