force-app/main/default/objects/Portal_Sync_Value_Map__mdt/fields/Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping__c</fullName>
    <description>The HubSpot Field Mapping this translation belongs to. The object and Salesforce field come from that row, so a value map is always scoped to one (object, field).</description>
    <label>Field Mapping</label>
    <referenceTo>HubSpot_Field_Mapping__mdt</referenceTo>
    <relationshipLabel>Value Maps</relationshipLabel>
    <relationshipName>Value_Maps</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>