force-app/main/default/objects/Portal_Sync_Value_Map__mdt/fields/HubSpot_Value__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Value__c</fullName>
    <description>The value sent to HubSpot for this Salesforce value, used by every portal without its own override. For a HubSpot picklist this must be the option INTERNAL VALUE, not its label -- HubSpot rejects any value that is not a defined option.</description>
    <label>HubSpot Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>