force-app/main/default/objects/Portal_Sync_Value_Map__mdt/fields/HubSpot_Value_TriBU__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Value_TriBU__c</fullName>
    <description>TriBU's value for this Salesforce value, when TriBU's picklist option internal value differs from the shared HubSpot Value. Leave blank to use HubSpot Value.</description>
    <label>HubSpot Value (TriBU)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>