force-app/main/default/objects/Portal_Sync_Value_Map__mdt/fields/Inbound_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Tie-break for the REVERSE (HubSpot to Salesforce) translation. Forward translation is many-to-one, so two Salesforce values can map onto one HubSpot value; reversing that is ambiguous and is refused rather than guessed. Check this on exactly ONE of the colliding rows to declare which Salesforce value an incoming HubSpot value becomes. Zero or two-plus checked leaves the ambiguity standing.</description>
    <label>Inbound Preferred</label>
    <type>Checkbox</type>
</CustomField>