force-app/main/default/objects/Portal_Sync_Value_Map__mdt/fields/Salesforce_Value__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Value__c</fullName>
    <description>The Salesforce value this row translates, matched case-insensitively (e.g. a picklist API value). For RecordTypeId the engine first converts the id to the record type DeveloperName, so put the DeveloperName here -- never the 18-char id, which differs between sandbox and production.</description>
    <label>Salesforce Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>